# devices

./: .coveragerc  .testr.conf  README.md  setup.cfg  tox.ini
Deploy/huge_docker/keystone/: Dockerfile
devicedemo/db/sqlalchemy/alembic/: env.py
devices/: i18n.py  messaging.py  service.py  version.py
devices/api/: app.py  config.py  hooks.py  root.py
devices/api/v1/: types.py
devices/api/v1/controllers/: __init__.py  device.py
devices/api/v1/datamodels/: device.py
devices/cmd/: api.py  dbmanage.py
devices/common/: context.py  exception.py  i18n.py  policy.py  rpc.py  service.py  utils.py
devices/common/db/alembic/: env.py
devices/conf/: __init__.py  api.py
devices/db/: api.py
devices/db/sqlalchemy/: api.py  migration.py  models.py
devices/db/sqlalchemy/alembic/: env.py
devices/tests/unit/api/: test_app.py
devstack/: devicedemo.sh  plugin.sh  settings
doc/install/: install_from_huge_docker.md  install_from_source.md
etc/devices/: api_paste.ini  devices.conf
