[metadata]
name = devices
version = 0.0.1
summary = OpenStack device api service Demo
description-file = README.md
author = tongfangcloud
author-email = yumaojun@tongfangcloud.com
classifier =
    Environment :: Web Environment
    Intended Audience :: Big Data Developers
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    devices

[entry_points]
console_scripts =
    devices-api = devices.cmd.api:main
    devices-dbmanage = devices.cmd.dbmanage:main

[global]
setup-hooks =
    pbr.hooks.setup_hook
